--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Weather">
         <activity
-            android:name=".aqiActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Weather.NoActionBar"/>
-        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -29,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".aqiActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Weather.NoActionBar"/>
+        <activity
+            android:name=".DetailedActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Weather.NoActionBar"/>
     </application>
 
 </manifest>
